# sample-foundry-apim

./: .gitignore  README.md
01-apim-setup/: README.md  setup-apim.ps1
01-apim-setup/policies/: chat-completions.xml  get-deployment.xml  list-deployments.xml
02-foundry-connection/: README.md  connection.bicep  parameters.example.json
03-agent-samples/: .env.example  README.md  chat_with_agent.py  create_agent.py  pyproject.toml  requirements.txt  test_connection.py
docs/: INTEGRATION-GUIDE.md
